--- a/FootballManager/app/views/index.scala.html
+++ b/FootballManager/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@main("Index") {
+@main("Index", user: models.User) {
 
 <div class="container navbar-default">
     <header class="top" role="header">
