--- a/FootballManager/app/views/leagueTable.scala.html
+++ b/FootballManager/app/views/leagueTable.scala.html
@@ -1,4 +1,4 @@
-@main("League Table") {
+@main("League Table", user: models.User) {
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">League Table</h1>
