--- a/FootballManager/app/views/main.scala.html
+++ b/FootballManager/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(pageID: String)(content: play.twirl.api.Html)
+@(pageID: String, user: models.User)(content: play.twirl.api.Html)
 
 <!DOCTYPE html>
 <html id="@pageID">
